Se agregan metodos get, cget y options
